# ViolAI

./: .replit  LICENSE  app.py  database.py  pyproject.toml  replit.nix
.streamlit/: config.toml
attached_assets/: Pasted-import-cv2-import-mediapipe-as-mp-import-numpy-as-np-import-tkinter-as-tk-from-tkinter-import-tt-1743587261525.txt
pages/: analytics.py  history.py
utils/: angle_calculator.py  bow_direction.py  calibration.py  data_manager.py  data_service.py  pose_tracking.py  posture_analyzer.py  rhythm_trainer.py
violin_coach_app/: README.md  pubspec.yaml
violin_coach_app/android/app/: build.gradle
violin_coach_app/ios/Runner/: Info.plist
violin_coach_app/ios/Runner.xcodeproj/: project.pbxproj
violin_coach_app/lib/: main.dart
violin_coach_app/lib/models/: calibration_profile.dart  classroom.dart  note_event.dart  practice_event.dart  practice_session.dart  shared_recording.dart  user.dart
violin_coach_app/lib/screens/: analytics_screen.dart  bow_note_sync_screen.dart  calibration_screen.dart  history_screen.dart  home_screen.dart  login_screen.dart  recording_share_screen.dart  student_home_screen.dart  teacher_classroom_screen.dart
violin_coach_app/lib/services/: audio_analyzer_service.dart  auth_service.dart  classroom_service.dart  database_helper.dart  pose_detector_service.dart  song_recognition_service.dart
violin_coach_app/lib/utils/: bow_direction_detector.dart  posture_analyzer.dart  rhythm_trainer.dart
violin_coach_app/lib/widgets/: note_detector_widget.dart
violin_coach_app/test/: widget_test.dart
(+2 files in other folders)
